infrastructure/kubernetes/base/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: skillsync-core-pod
  namespace: skillsync
  labels:
    app.kubernetes.io/name: skillsync-core
    app.kubernetes.io/component: standalone-pod
spec:
  imagePullSecrets:
    - name: dockerhub-registry
  containers:
    - name: core-service
      image: kumarreddy1902/skillsync:0.1.0
      imagePullPolicy: IfNotPresent
      ports:
        - name: http
          containerPort: 5000
